Fix copy to clipboard

--- a/tmux/tmux-keybindings.conf
+++ b/tmux/tmux-keybindings.conf
@@ -16,7 +16,7 @@ bind l select-pane -R
 unbind p
 
 bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-pipe "./~/dotfiles/utils/copy"
+bind -t vi-copy y copy-pipe "~/dotfiles/utils/copy"
 bind p paste-buffer
 
 setw -g mode-keys vi
