Add future fix for mouse highlighting

--- a/tmux/tmux-keybindings.conf
+++ b/tmux/tmux-keybindings.conf
@@ -20,3 +20,5 @@ bind -t vi-copy y copy-pipe "~/dotfiles/utils/copy"
 bind p paste-buffer
 
 setw -g mode-keys vi
+# stop mouse dragging from exiting copy mode (not supported in v2.1)
+# unbind -t vi-copy MouseDragEnd1Pane
