--- a/tmux/tmux-keybindings.conf
+++ b/tmux/tmux-keybindings.conf
@@ -15,10 +15,10 @@ bind l select-pane -R
 # Use vim keybindings in copy-mode
 unbind p
 
-bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-pipe "~/dotfiles/utils/copy"
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "~/dotfiles/utils/copy"
 bind p paste-buffer
 
 setw -g mode-keys vi
-# stop mouse dragging from exiting copy mode (not supported in v2.1)
-# unbind -t vi-copy MouseDragEnd1Pane
+# stop mouse dragging from exiting copy mode
+unbind -T copy-mode-vi MouseDragEnd1Pane
