--- a/tmux/tmux-keybindings.conf
+++ b/tmux/tmux-keybindings.conf
@@ -1,3 +1,8 @@
+# Use ` as prefix
+set -g prefix `
+# Type ` twice to send the ` character
+bind ` send-prefix
+
 # Bind 'v' to make a vertical split
 bind v split-window -h -c "#{pane_current_path}"
 
@@ -15,6 +20,7 @@ bind l select-pane -R
 # Use vim keybindings in copy-mode
 unbind p
 
+bind Escape copy-mode
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "~/dotfiles/utils/copy"
 bind p paste-buffer
