keep current dir in new terminals

--- a/tmux/tmux-keybindings.conf
+++ b/tmux/tmux-keybindings.conf
@@ -4,7 +4,10 @@ set -g prefix `
 bind ` send-prefix
 
 # Bind 'v' to make a vertical split
+# New terminals start with current working dir
 bind v split-window -h -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
 # Reload config
 bind r source-file ~/.tmux.conf
