--- a/tmux/tmux-keybindings.conf
+++ b/tmux/tmux-keybindings.conf
@@ -20,6 +20,8 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+bind -r f run-shell "tmux neww ~/dotfiles/utils/tmux-sessionizer"
+
 # Use vim keybindings in copy-mode
 unbind p
 
