--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,6 +5,8 @@ set -g focus-events on
 # Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
 
+set-option -sg escape-time 10
+
 set -g pane-border-style fg=black,bright
 set -g pane-active-border-style fg=colour245
 set -g base-index 1
