--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,4 +1,5 @@
 set -g default-terminal "screen-256color"
+set-option -sa terminal-overrides ",xterm-256color:RGB"
 source-file ~/dotfiles/tmux/tmux-keybindings.conf
 set -g focus-events on
 
