unbind tmux mouse drag

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,6 +5,7 @@ set -g focus-events on
 
 # Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
+unbind -n MouseDrag1Pane
 
 set-option -sg escape-time 10
 
