--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -20,6 +20,7 @@
     puo = !git push -u origin "$(git symbolic-ref --short HEAD)"
     cmb = "!. ~/dotfiles/git/githelpers && git_clean_merged_branch"
     cf = clang-format
+    sc = "!. ~/dotfiles/git/githelpers && git_show_commits"
 
     # Fancy logging.
     #   h = head
