--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -17,7 +17,7 @@
     fm = !. ~/dotfiles/git/githelpers && git fetch origin "$(git_trunk_branch)":"$(git_trunk_branch)"
     ds = diff --stat
     dh1 = diff HEAD~1
-    puo = !git push -u origin "$(git symbolic-ref --short HEAD)"
+    puo = !git push -u origin HEAD
     cmb = "!. ~/dotfiles/git/githelpers && git_clean_merged_branch"
     cf = clang-format
     sc = "!. ~/dotfiles/git/githelpers && git_show_commits"
