--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -9,6 +9,7 @@
     co = checkout
     di = diff
     dc = diff --cached
+    dio = !git diff origin/"$(git symbolic-ref --short HEAD)"
     amend = commit --amend
     aa = add --all
     ff = merge --ff-only
