--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,6 +3,8 @@ set-option -sa terminal-overrides ",xterm-256color:RGB"
 source-file ~/dotfiles/tmux/tmux-keybindings.conf
 set -g focus-events on
 
+set-option -g detach-on-destroy off
+
 # Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
 unbind -n MouseDrag1Pane
